# sakura-lite

./: README.md
backend/: pyproject.toml  test_llm.py
backend/app/: main.py
backend/app/api/routes/: chat.py
backend/app/chat/: service.py
backend/app/cognitive/: engine.py
backend/app/conversation/: in_memory_repository.py  models.py  repository.py  service.py
backend/app/core/: config.py  container.py  dependencies.py  logging.py
backend/app/llm/: base.py  factory.py  models.py  service.py
backend/app/llm/providers/: nvidia.py  openrouter.py
backend/app/memory/: models.py  repository.py  service.py
backend/app/pipeline/: base.py  context.py  engine.py
backend/app/pipeline/stages/: conversation.py  llm.py
backend/app/prompt/: builder.py  system_prompt.py
backend/app/schemas/: chat.py
backend/tests/: test_conversation.py  test_memory.py  test_nvidia.py  test_openrouter.py
docs/: architecture.md
